# HClustering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analysis.txt  booster.json  build.sh  data_inspect.ipynb  exampleRun.sh  exp1.txt  exp1eval.md  exp2.txt  exp2eval.md  exp3.txt  exp3eval.md  exp4.txt  features  features copy  numbersNotNormalized.txt  run.sh
31.01.22/: plot.ipynb
PGD/: CMakeLists.txt  Makefile
PGD/source/: graphlet_core.cpp  graphlet_utils.cpp
app/: configuration.h  ml_cluster.cpp  ml_create_data.cpp  ml_label_propagation.cpp  ml_train.cpp  parse_parameters.h
data/: 3-cluster.cluster  3-cluster.metis  3-connected.cluster  3-connected.metis  4-cluster.cluster  4-cluster.metis  com-amazon.top5000.cmty.txt-nodes  data_split.sh  email-Eu-core.cmty.txt-nodes  email-Eu-core.metis  luxembourg.cluster
data/com-amazon/: com-amazon.top5000.cmty.txt
data/com-dblp/: com-dblp.top5000.cmty.txt  com-dblp.top5000.cmty.txt-nodes
data/com-youtube/: com-youtube.top5000.cmty.txt  com-youtube.top5000.cmty.txt-nodes
data/testFiles/: test.metis  testFeatureSave.txt
greedy-clustering/: plot.ipynb
include/: graphFeatures.h  inOut.h  labelPropagation.h
profiling/: clsCoeff_intersect_noBinary  current_training  initial  sharedCMT_Linear  sharedNeigh_use_undirected
scripts/: clean.ipynb  communityNodesList_nodesCommunityList.py  create_clique_like_graphs.cpp  find_same_lines.ipynb  plot_learning.ipynb  plotgraph.ipynb  spektraldata.ipynb  translate.py  translate_cmty.cpp  translate_graphlet.sh  translate_new.py  translate_ungraph.py
src/: graphFeatures.cpp  graphFormats.cpp  inOut.cpp  labelPropagation.cpp  main.cpp
(+20 files in other folders)
